--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tutorial on javascript",
   "main": "index.js",
   "scripts": {
+    "start": "live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
